# TaskManager

./: docker-compose.yml  go.mod
.github/workflows/: go.yml
auth-service/: Dockerfile  go.mod  go.sum
auth-service/cmd/: main.go
auth-service/cmd/grpc_server/: main.go
auth-service/configs/: config.go
auth-service/docs/: docs.go  swagger.json  swagger.yaml
auth-service/internal/grpc/: server.go
auth-service/internal/handlers/: auth.go  auth_test.go
auth-service/internal/middleware/: auth_middleware.go
auth-service/internal/models/: requests.go  user.go
auth-service/internal/repository/: auth_repo.go  auth_repo_test.go  mock_repo.go
auth-service/migrations/: 001_init_users.sql
auth-service/pkg/jwt/: jwt.go  jwt_test.go
auth-service/proto/: auth.proto
auth-service/proto/auth/: auth.pb.go  auth_grpc.pb.go
backend/: go.mod
backend/auth-service/cmd/: main.go
backend/auth-service/grpc/: server.go
backend/auth-service/migrations/: 001_init_users.sql
backend/auth-service/proto/: auth.proto
file-service/: Cargo.toml  test_search.txt
file-service/src/: lib.rs  main.rs  text_processor.rs
file-service/tests/: api-tests.rs  text_processor_tests.rs
task-service/: Dockerfile  go.mod  go.sum
task-service/cmd/: main.go
task-service/configs/: config.go
task-service/docs/: docs.go  swagger.json  swagger.yaml
task-service/internal/handlers/: task.go  (+1 more)
time-service/: Cargo.toml  diesel.toml
time-service/migrations/: create_time_entries_up.sql
time-service/src/: errors.rs  handlers.rs  main.rs  models.rs  repository.rs  schema.rs
(+10 files in other folders)
