[package]
name = "file-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_service"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.0"
tempfile = "3.3"
actix-http = "3" 